--- a/Python Fundamentals/Module_4_Practice_Python_Fundamentals.ipynb
+++ b/Python Fundamentals/Module_4_Practice_Python_Fundamentals.ipynb
@@ -271,12 +271,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "\n",
+      "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\n",
+      "100   303  100   303    0     0   2104      0 --:--:-- --:--:-- --:--:--  2104\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] use curl to download https://raw.githubusercontent.com/MicrosoftLearning/intropython/master/digits_of_pi as pi.txt\n",
-    "\n"
+    "\n",
+    "!curl https://raw.githubusercontent.com/MicrosoftLearning/intropython/master/digits_of_pi -o pi.txt\n",
+    "    "
    ]
   },
   {
@@ -295,11 +309,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please enter your name: Sam\n",
+      "Hello Sam!\n",
+      "Guess the value of the digit: 4\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Set up the project files and initial values\n",
+    "pi_file = open (\"pi.txt\",\"r\")\n",
+    "\n",
+    "user_name = input (\"Please enter your name: \")\n",
+    "print (\"Hello \" + user_name + \"!\")\n",
+    "seed = len(user_name)\n",
+    "pi_file.seek(seed)\n",
+    "digit = pi_file.read(1)\n",
+    "guess = input (\"Guess the value of the digit: \")\n",
+    "correct = 0\n",
+    "wrong = 0\n",
     "\n"
    ]
   },
@@ -322,11 +356,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Correct!\n",
+      "Guess the value of the digit: 2\n",
+      "Incorrect\n",
+      "Guess the value of the digit: 3\n",
+      "Incorrect\n",
+      "Guess the value of the digit: 4\n",
+      "Correct!\n",
+      "Guess the value of the digit: q\n",
+      "Totals:\n",
+      "Correct: 2\n",
+      "Incorrect: 2\n"
+     ]
+    }
+   ],
    "source": [
-    "\n"
+    "while guess.isdigit():\n",
+    "    if digit == \".\":\n",
+    "        digit = pi_file.read(1)\n",
+    "    elif digit == \"\\n\":\n",
+    "        seed +=1\n",
+    "        pi_file.seek(seed)\n",
+    "    elif guess == digit:\n",
+    "        print (\"Correct!\")\n",
+    "        correct += 1\n",
+    "    elif guess != digit:\n",
+    "        print (\"Incorrect\")\n",
+    "        wrong += 1\n",
+    "    else:\n",
+    "        pass\n",
+    "    \n",
+    "    guess = input (\"Guess the value of the digit: \")\n",
+    "    \n",
+    "print (\"Totals:\")\n",
+    "print (\"Correct:\", correct)\n",
+    "print (\"Incorrect:\", wrong)\n",
+    "pi_file.close()\n"
    ]
   },
   {
