--- a/Python Fundamentals/Module_4_Required_Code_Python_Fundamentals.ipynb
+++ b/Python Fundamentals/Module_4_Required_Code_Python_Fundamentals.ipynb
@@ -90,17 +90,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "City of Beijing month ave: highest high is 30.9 Celsius\n",
+      "City of Cairo month ave: highest high is 34.7 Celsius\n",
+      "City of London month ave: highest high is 23.5 Celsius\n",
+      "City of Nairobi month ave: highest high is 26.3 Celsius\n",
+      "City of New York City month ave: highest high is 28.9 Celsius\n",
+      "City of Sydney month ave: highest high is 26.5 Celsius\n",
+      "City of Tokyo month ave: highest high is 30.8 Celsius\n",
+      "City of Rio de Janeiro month ave: highest high is 30.0 Celsius\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "\n",
+      "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\n",
+      "100   222  100   222    0     0   1694      0 --:--:-- --:--:-- --:--:--  1707\n"
+     ]
+    }
+   ],
    "source": [
     "# [] create The Weather\n",
     "# [] copy and paste in edX assignment page\n",
+    "!curl https://raw.githubusercontent.com/MicrosoftLearning/intropython/master/world_temp_mean.csv -o mean_temp.txt\n",
+    "temp_file = open(\"mean_temp.txt\",\"a+\")\n",
+    "temp_file.write(\"Rio de Janeiro,Brazil,30.0,18.0\\n\")\n",
+    "temp_file.seek(0)\n",
+    "heading = temp_file.readline().strip(\"\\n\").split(\",\")\n",
+    "#heading_city = heading[0].capitalize()\n",
+    "\n",
+    "while True:\n",
+    "    city = temp_file.readline().split(\",\")\n",
+    "\n",
+    "    if city[0] == \"\":\n",
+    "        break\n",
+    "\n",
+    "    print (heading[0].capitalize(), \"of\", city[0], heading[2], \"is\", city[2], \"Celsius\" )\n",
+    "\n",
+    "    \n",
     "\n",
     "\n",
-    "\n"
+    "temp_file.close()"
    ]
   },
   {
@@ -128,7 +168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
