--- a/Python Fundamentals/Module_5_Required_FINAL_Project_Python_Fundamentals.ipynb
+++ b/Python Fundamentals/Module_5_Required_FINAL_Project_Python_Fundamentals.ipynb
@@ -85,15 +85,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "\n",
+      "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\n",
+      "100   161  100   161    0     0   1102      0 --:--:-- --:--:-- --:--:--  1110\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name one of the first 20 elements of the Periodic Table of Elements: oxygen\n",
+      "Name one of the first 20 elements of the Periodic Table of Elements: carbon\n",
+      "Name one of the first 20 elements of the Periodic Table of Elements: helium\n",
+      "Name one of the first 20 elements of the Periodic Table of Elements: hydrogen\n",
+      "Name one of the first 20 elements of the Periodic Table of Elements: neon\n",
+      "Found: oxygen carbon helium hydrogen neon \n",
+      "Not Found: \n",
+      "Score: 100.0%\n"
+     ]
+    }
+   ],
    "source": [
     "# [] create Element_Quiz\n",
     "# [] copy and paste in edX assignment page\n",
+    "!curl https://raw.githubusercontent.com/MicrosoftLearning/intropython/master/elements1_20.txt -o elements.txt\n",
+    "guesses = []\n",
+    "correct = []\n",
+    "incorrect = []\n",
+    "elements = []\n",
+    "elements_file = open(\"elements.txt\",\"r\")\n",
     "\n",
+    "    \n",
+    "def get_names():\n",
+    "    guesses = []\n",
+    "    i = 0\n",
+    "    \n",
+    "    while i < 5:\n",
+    "        temp_guess = input(\"Name one of the first 20 elements of the Periodic Table of Elements: \").lower()\n",
+    "        \n",
+    "        if temp_guess in guesses:\n",
+    "            print (\"You have already guessed that element.\")\n",
+    "        elif temp_guess == \"\":\n",
+    "            print (\"Emtpy answers are not allowed\")\n",
+    "        else:\n",
+    "            guesses.append(temp_guess)\n",
+    "            i += 1\n",
+    "            \n",
+    "    return guesses\n",
+    "\n",
+    "index = 0\n",
+    "\n",
+    "while True:\n",
+    "    \n",
+    "    temp = elements_file.readline().strip(\"\\n \").lower()\n",
+    "    if temp == \"\":\n",
+    "        break\n",
+    "    else:\n",
+    "        elements.append(temp)\n",
+    "    \n",
+    "guess = get_names()\n",
+    "\n",
+    "index = 0\n",
+    "\n",
+    "for index in guess:\n",
+    "    if index in elements:\n",
+    "        correct.append(index)\n",
+    "    else:\n",
+    "        incorrect.append(index)\n",
+    "        \n",
+    "print (\"Found: \", end=\"\")\n",
+    "for x in correct: \n",
+    "    print (x, end=\" \")\n",
+    "print (\"\")\n",
+    "    \n",
+    "print (\"Not Found: \", end=\"\")\n",
+    "for x in incorrect:\n",
+    "    print (x, end=\" \")\n",
+    "print (\"\")\n",
+    "\n",
+    "print (\"Score: \" + str((len(correct)/5)*100) + \"%\")\n",
+    "\n",
+    "        \n",
+    "elements_file.close()\n",
+    "    \n",
     "\n",
     "\n"
    ]
@@ -123,7 +206,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
